--- a/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Components/ExistingFiles.razor
+++ b/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Components/ExistingFiles.razor
@@ -2,7 +2,7 @@
 @using TicketingSystemFrontend.Client.Services.Extensions
 @using TicketingSystemFrontend.Client.Services.Interfaces
 @inject IJSRuntime JS
-@inject IArticleService ArticleService
+@inject IFileService FileService
 
 @if (Files.Count == 0)
 {
@@ -13,7 +13,7 @@ else
     <ul>
         @foreach (var f in Files)
         {
-            <ExistingFileElement File="f" ArticleId="ArticleId" OnFileDeleted="HandleFileDeleted" />
+            <ExistingFileElement File="f" ArticleId="ArticleId" OnFileDeleted="HandleFileDeleted" EntityType="@EntityType" />
         }
     </ul>
 }
@@ -28,6 +28,11 @@ else
     [Parameter]
     public EventCallback<FileDto> OnFileDeleted { get; set; }
 
+    //parameter for indicating which entity to show (string parameter)
+    [Parameter]
+    public string EntityType { get; set; }
+
+
     private async Task HandleFileDeleted(FileDto file)
     {
         var confirmed = await JS.InvokeAsync<bool>("confirm", $"Are you sure you want to delete {file.FileName}?");
@@ -35,7 +40,7 @@ else
         {
             try
             {
-                await ArticleService.DeleteFileAsync(ArticleId, file.Id);
+                await FileService.DeleteAsync(ArticleId, file.Id, EntityType);
                 await OnFileDeleted.InvokeAsync(file); // Notify parent to refresh or remove the file
             }
             catch (Exception ex)
