--- a/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Articles/ArticleDetails.razor
+++ b/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Articles/ArticleDetails.razor
@@ -19,7 +19,7 @@
     <p><em>Loading...</em></p>
 }
 else
-{
+{  
     <div class="card">
         <div class="card-body">
             <h5 class="card-title">@article.Title</h5>
@@ -40,7 +40,7 @@ else
             <p class="card-text">@article.Description</p>
 
             <h6>Attachments:</h6>
-            <ExistingFiles EntityApiType="articles" Id="@id" />
+            <ExistingFiles EntityApiType="articles" EntityId="@id" />
 
             @if (isAdmin || (UserId == article.UserId))
             {
@@ -80,6 +80,8 @@ else
         }
 
         article = await ArticleService.GetByIdAsync(id);
+
+        isLoading = false;
     }
 
     private async Task DeleteArticle()
