--- a/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Components/ExistingFileElement.razor
+++ b/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Components/ExistingFileElement.razor
@@ -18,7 +18,7 @@
     public string EntityApiType { get; set; } = string.Empty;
 
     [Parameter]
-    public int Id { get; set; }
+    public int EntityId { get; set; }
 
     [Parameter]
     public EventCallback<FileDto> OnFileDeleted { get; set; }
@@ -27,7 +27,7 @@
     {
         try
         {
-            var bytes = await FileService.DownloadAsync(Id, File.Id, EntityApiType);
+            var bytes = await FileService.DownloadAsync(EntityId, File.Id, EntityApiType);
             var base64 = Convert.ToBase64String(bytes);
             await JS.InvokeVoidAsync("downloadFileFromBytes", File.FileName, base64);
         }
