--- a/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Tickets/TicketDetails.razor
+++ b/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Tickets/TicketDetails.razor
@@ -46,7 +46,7 @@ else
             <p class="card-text text-muted">@ticket.Description</p>
 
             <h6>Attachments:</h6>
-            <ExistingFiles EntityApiType="tickets" Id="@id" />
+            <ExistingFiles EntityApiType="tickets" EntityId="@id" />
 
             <div class="mt-3">
                 <a class="btn btn-primary me-2" href="/tickets/@id/edit">Update</a>
