created IFile repository, one handler uses it.
Next steps: to use that in another handlers, to create File folder inside handlers folder, to add controllers. May be to implement service for saving in folder the files.

--- a/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Articles/ArticleDetails.razor
+++ b/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Articles/ArticleDetails.razor
@@ -53,7 +53,7 @@ else
                                 Download @f.FileName
                             </button>
 
-                            @if (isAdmin || isAgent)
+                            @if (isAdmin || (UserId == article.UserId))
                             {
                                 <button class="btn btn-sm btn-danger ms-2" @onclick="() => DeleteFile(f.Id)">
                                     Delete
