--- a/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Components/ExistingFiles.razor
+++ b/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Components/ExistingFiles.razor
@@ -11,7 +11,7 @@ else
     <ul>
         @foreach (var f in Files)
         {
-            <ExistingFileElement File="f" EntityApiType="@EntityApiType" EntityId="EntityId" />
+            <ExistingFileElement File="f" EntityApiType="@EntityApiType" EntityId="EntityId" OnFileDeleted="ReloadFiles" />
         }
     </ul>
 }
@@ -27,6 +27,12 @@ else
 
     protected override async Task OnInitializedAsync()
     {
+        await ReloadFiles();
+    }
+
+    private async Task ReloadFiles()
+    {
         Files = await FileService.GetFilesAsync(EntityId, EntityApiType) ?? new List<FileDto>();
+        StateHasChanged();
     }
 }
