adding ticket categories in dashboard

--- a/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Dashboard.razor
+++ b/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Dashboard.razor
@@ -11,7 +11,11 @@
 }
 else
 {
-    <TicketDonut Tickets="tickets" />
+    <div class="d-flex justify-content-around">
+        <StatusDonut Tickets="tickets" />
+        <PriorityDonut Tickets="tickets" />
+        <CategoryDonut Tickets="tickets" />
+    </div>
 }
 
 @code {
