--- a/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/PriorityDonut.razor
+++ b/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/PriorityDonut.razor
@@ -18,7 +18,7 @@
             (medium / Total * 100, "#FFC107"),
             (high / Total * 100, "#ff3333"),
             (critical / Total * 100, "black"),
-            (low / Total * 100, "#1a1a1a")
+            (low / Total * 100, "#4CAF50")
         };
 }
 <div class="text-center">
