added posibility to local-specified connection to database. fixed logo-favicon

--- a/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Layout/MainLayout.razor
+++ b/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Layout/MainLayout.razor
@@ -5,7 +5,7 @@
         <header class="d-flex flex-wrap align-items-center justify-content-between py-3 mb-4 border-bottom">
             <!-- Logo -->
             <a href="/" class="d-flex align-items-center mb-2 mb-md-0 text-dark text-decoration-none">
-                <img src="@Assets["images/logo.png"]" alt="My Logo" width="64" height="64" class="me-2" />
+                <img src="@Assets["favicon.png"]" alt="My Logo" width="64" height="64" class="me-2" />
             </a>
 
             <!-- Navbar links -->
