--- a/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Layout/MainLayout.razor
+++ b/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Layout/MainLayout.razor
@@ -1,12 +1,12 @@
 ﻿@inherits LayoutComponentBase
-
+@using TicketingSystemFrontend.Client.Pages.Components
 <CascadingAuthenticationState>
     <div class="container">
         <header class="d-flex flex-wrap align-items-center justify-content-between py-3 mb-4 border-bottom">
             <!-- Logo -->
             <a href="/" class="d-flex align-items-center mb-2 mb-md-0 text-dark text-decoration-none">
                 <img src="@Assets["favicon.png"]" alt="My Logo" width="64" height="64" class="me-2" />
-                <span href="/" class="fs-4">Ticketing System</span>
+                <span href="/" class="fs-4">@PageHeaderTitle</span>
             </a>
 
             <!-- Site title -->
@@ -43,7 +43,9 @@
             </AuthorizeView>
         </header>
 
-        @Body
+        <CascadingValue Value="SetPageTitle">
+            @Body
+        </CascadingValue>
     </div>
 
     <footer class="pt-3 mt-4 bg-light text-center w-100">
@@ -55,3 +57,14 @@
         <p class="text-center text-body-secondary">© 2025 Company, Inc</p>
     </footer>
 </CascadingAuthenticationState>
+
+
+@code {
+    public string PageHeaderTitle { get; set; } = "Ticketing System";
+
+    private void SetPageTitle(string title)
+    {
+        PageHeaderTitle = title;
+        StateHasChanged();
+    }
+}
