--- a/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Layout/MainLayout.razor
+++ b/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Layout/MainLayout.razor
@@ -17,30 +17,10 @@
                 <li><NavLink href="/" class="nav-link px-2 link-dark">Tickets</NavLink></li>
                 <li><NavLink href="/dashboard" class="nav-link px-2 link-dark">Dashboard</NavLink></li>
                 <li><NavLink href="/articles" class="nav-link px-2 link-dark">Articles</NavLink></li>
-                <AuthorizeView Roles="Admin">
-                    <li>
-                        <NavLink href="/adminpanel" class="nav-link px-2 link-danger fw-bold">
-                            Admin Panel
-                        </NavLink>
-                    </li>
-                </AuthorizeView>
+                <AdminNavItem />
             </ul>
 
-            <!-- Auth buttons -->
-            <AuthorizeView>
-                <Authorized>
-                    <div class="text-end">
-                        <NavLink href="/profile" class="btn btn-outline-primary">Profile</NavLink>
-                        <LogoutButton />
-                    </div>
-                </Authorized>
-                <NotAuthorized>
-                    <div class="text-end">
-                        <NavLink href="/login" class="btn btn-outline-primary me-2">Login</NavLink>
-                        <NavLink href="/register" class="btn btn-primary">Sign-up</NavLink>
-                    </div>
-                </NotAuthorized>
-            </AuthorizeView>
+            <AuthButtons />
         </header>
 
         <CascadingValue Value="SetPageTitle">
